--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -19,7 +19,10 @@
   border-radius: 50%;
   height: 35vh;
   width: 18vw;
-  background-color: white;
+  background-size: cover;
+  background-position: center;
+  background-image: url("./img/me.jpg");
+  filter: drop-shadow(white 0rem 0rem 120px)
 }
 
 .animated-content {
@@ -96,6 +99,50 @@
 
 #about-me {
   width: 35%;
+}
+
+.skills-itens {
+  text-decoration: none;
+  background-image: linear-gradient(to bottom left, #FFFFFF, #eb4f4f);
+  color: transparent;
+  -webkit-background-clip: text;
+  font-weight: bold !important;
+}
+
+#title-skills {
+  font-size: 30px;
+  text-decoration: none;
+  background-image: linear-gradient(to bottom left, #FFFFFF, #eb4f4f);
+  color: transparent;
+  -webkit-background-clip: text;
+  font-weight: bold !important;
+}
+
+#project-section {
+  background-size: cover;
+  background-position: center;
+  background-image: url("./img/newBack.jpg");
+  width: 100%;
+  height: 85vh;
+}
+
+.div-proj {
+  width: 18vw;
+  height: 18vh;
+  margin-top: 10px;
+  box-shadow: 0px 0px 10px rgb(255, 0, 0)
+}
+
+#div-projects {
+  margin-top: 100px;
+}
+
+#title-project {
+  text-decoration: none;
+  background-image: linear-gradient(to bottom left, #FFFFFF, #eb4f4f);
+  color: transparent;
+  -webkit-background-clip: text;
+  font-size: 40px;
 }
 
 :root {
