feat: finish and logo

--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -119,9 +119,7 @@
 }
 
 #project-section {
-  background-size: cover;
-  background-position: center;
-  background-image: url("./img/newBack.jpg");
+  background-color: #000000;
   width: 100%;
   height: 85vh;
 }
@@ -143,6 +141,16 @@
   color: transparent;
   -webkit-background-clip: text;
   font-size: 40px;
+}
+
+#contact-section {
+  background: linear-gradient(to bottom, #000000, #8B0000);
+  width: 100%;
+  height: 85vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
 }
 
 :root {
