--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,10 @@
   flex-direction: row;
 }
 
+#navbar-id {
+  filter: drop-shadow(rgb(255, 0, 0) 0rem 0rem 40px)
+}
+
 #div-img {
   border-radius: 50%;
   height: 35vh;
